modify data scheme

--- a/locales/cn/common.json
+++ b/locales/cn/common.json
@@ -2,14 +2,16 @@
     "Title": "家谱",
     "Greeting": "嗨，家人们！",
     "NoPage": "页面不存在",
+    "UserProtal": "用户入口",
     "SelectFamily": "选择家族：",
     "Edit": "编辑",
     "Preview": "预览",
     "Person": "人物",
+    "CreatePerson": "创建人物",
     "Stories": "故事",
     "Story": "故事",
     "Album": "相簿",
-    "GreetingWithName": "你好，{{name}}！",
+    "GreetingWithName": "您好，{{name}}！",
     "AddPerson": "添加人物",
     "EditPerson": "编辑人物",
     "DeletePerson": "删除人物",
