--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,10 +2,12 @@
 	"Title": "Jiapu",
 	"Greeting": "Hi, family!",
 	"NoPage": "Page does not exist",
+	"UserProtal": "User Protal",
 	"SelectFamily": "Select family:",
 	"Edit": "Edit",
 	"Preview": "Preview",
 	"Person": "Person",
+	"CreatePerson": "Create a person",
 	"Stories": "Stories",
 	"Story": "Story",
 	"Album": "Album",
