--- a/locales/en/story.json
+++ b/locales/en/story.json
@@ -1,5 +1,7 @@
 {
+    "Stories": "Stories",
     "CreateStory": "Create story",
     "Title": "Title",
+    "Collection": "Collection",
     "Submit": "Submit"
 }
