--- a/locales/en/person.json
+++ b/locales/en/person.json
@@ -1,27 +1,34 @@
 {
-    "male": "male",
-    "female": "female",
-    "nonbinary": "nonbinary",
-    "father": "father",
-    "mother": "mother",
-    "parent": "parent",
-    "son": "son",
-    "daughter": "daughter",
-    "child": "child",
-    "husband": "husband",
-    "wife": "wife",
-    "spouse": "spouse",
-    "surname": "surname",
-    "name": "name",
-    "gender": "gender",
-    "dateOfBirth": "date of birth",
-    "dateOfDeath": "date of death",
+    "male": "Memorial",
+    "female": "Female",
+    "nonbinary": "Nonbinary",
+    "father": "Father",
+    "mother": "Mother",
+    "parent": "Parent",
+    "son": "Son",
+    "daughter": "Daughter",
+    "child": "Child",
+    "husband": "Husband",
+    "wife": "Wife",
+    "spouse": "Spouse",
+    "surname": "Surname",
+    "name": "Name",
+    "gender": "Gender",
+    "bornIn": "Born in: ",
+    "diedIn": "Died in: ",
+    "dateOfBirth": "Date of birth",
+    "dateOfDeath": "Date of death",
     "isDead": "dead",
     "isNotDead": "alive",
-    "relations": "relations",
-    "addRelation": "add relation",
-    "removeRelation": "remove relation",
-    "story": "story",
-    "selectPerson": "select person",
-    "Submit": "Submit"
+    "relations": "Relations",
+    "addRelation": "Add relation",
+    "removeRelation": "Remove relation",
+    "personStory": "{{person}}'s story",
+    "story": "Story",
+    "selectPerson": "Select person",
+    "edit": "Edit person profile",
+    "Submit": "Submit",
+    "selectPortrait": "Select Portrait",
+    "isAlive": "Is alive",
+    "storyTemplate": "<h2>Birth</h2><p>(dates of birth)</p><h2>Biography</h2><p>(biography)</p><h2>Achievements</h2><p>(achievements)</p><h2>Competence</h2><p>(competence)</p><h2>Stories</h2><p>(stories)</p><h2>Works</h2><p>(works)</p><h2>Relations</h2><p>(relations)</p><h2>Comments</h2><p>(comments)</p><h2>Motto</h2><p>(motto)</p>"
 }
